# ncrypted_cli

./: .gitignore  CHANGELOG.md  README.md  entitlements.plist  install.sh  ncrypted.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/: duplicate-upload-detection.md  releasing.md
ncrypted_cli/: __init__.py  __main__.py  account_policy.py  actions.py  api.py  auth.py  banner.py  captcha.py  cli.py  config.py  crypto.py  instance.py  passphrase_policy.py  progress.py  throttle.py  ui.py  version_check.py
ncrypted_cli/assets/: common_passwords_1k.txt
scripts/: build-binary.sh  package-binary.sh
tasks/: 2026-06-28-api-subdomain-topology.md
